Refactor and Homemade Dijkstra (#3)