@@ -6,23 +6,25 @@ import java.util.stream.Collectors;
 
 /**
  * Implementation of Dijkstra's algorithm: https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm
+ * <p>
+ * With little improvement to return the edges instead of vertex.
  */
 public class Dijkstra {
-    private List<Vertex> nodes;
+    private List<Vertex> vertexes;
     private List<Edge> edges;
     private Map<Vertex, Set<Vertex>> vertexWithNeighbors;
 
-    public Dijkstra(List<Vertex> nodes, List<Edge> edges) {
-        this.nodes = nodes;
+    public Dijkstra(List<Vertex> vertexes, List<Edge> edges) {
+        this.vertexes = vertexes;
         this.edges = edges;
         this.vertexWithNeighbors = edges.stream().collect(Collectors.groupingBy(Edge::from, Collectors.mapping(Edge::to, Collectors.toSet())));
     }
 
-    public List<Vertex> shortestTrack(Vertex from, Vertex to) {
+    public List<Edge> shortestTrack(Vertex from, Vertex to) {
         Set<Vertex> settledNodes = new HashSet<>();
         Set<Vertex> unSettledNodes = new HashSet<>();
         Map<Vertex, Integer> distances = new HashMap<>();
-        Map<Vertex, Vertex> predecessors = new HashMap<>();
+        Map<Vertex, Map.Entry<Vertex, Edge>> predecessors = new HashMap<>();
         distances.put(from, 0);
         unSettledNodes.add(from);
 
@@ -33,7 +35,7 @@ public class Dijkstra {
 
             // We found it!
             if (target.equals(to)) {
-                return getPath(target, predecessors);
+                return getRoute(to, predecessors);
             }
 
             settledNodes.add(target);
@@ -41,34 +43,34 @@ public class Dijkstra {
 
             Set<Vertex> neighbors = vertexWithNeighbors.getOrDefault(target, Collections.emptySet());
             for (Vertex neighbor : neighbors) {
-                int distanceFromRoot = getDistanceFromRoot(distances, target, neighbor);
+                int targetDistance = distances.getOrDefault(target, Integer.MAX_VALUE);
+                Edge minEdge = edges.stream()
+                        .filter(edge -> edge.from().equals(target) && edge.to().equals(neighbor))
+                        .min(Comparator.comparing(Edge::length))
+                        .orElse(null);
+                int distanceFromRoot = (targetDistance == Integer.MAX_VALUE || minEdge == null) ? Integer.MAX_VALUE : targetDistance + minEdge.length();
                 int neighborDistance = distances.getOrDefault(neighbor, Integer.MAX_VALUE);
                 if (distanceFromRoot < neighborDistance) {
                     distances.put(neighbor, distanceFromRoot);
-                    predecessors.put(neighbor, target);
+                    predecessors.put(neighbor, Map.entry(target, minEdge));
                     unSettledNodes.add(neighbor);
                 }
             }
         }
-        return List.of();
+        return Collections.emptyList();
     }
 
-    private int getDistanceFromRoot(Map<Vertex, Integer> distances, Vertex target, Vertex neighbor) {
-        int targetDistance = distances.getOrDefault(target, Integer.MAX_VALUE);
-        int length = edges.stream()
-                .filter(edge -> edge.from().equals(target) && edge.to().equals(neighbor))
-                .mapToInt(Edge::length)
-                .min()
-                .orElse(Integer.MAX_VALUE);
-        return (targetDistance == Integer.MAX_VALUE || length == Integer.MAX_VALUE) ? Integer.MAX_VALUE : targetDistance + length;
-    }
-
-    private List<Vertex> getPath(Vertex target, Map<Vertex, Vertex> predecessors) {
-        List<Vertex> route = new ArrayList<>();
-        Vertex previous = target;
+    private List<Edge> getRoute(Vertex to, Map<Vertex, Map.Entry<Vertex, Edge>> predecessors) {
+        List<Edge> route = new ArrayList<>();
+        Vertex previous = to;
         do {
-            route.add(previous);
-            previous = predecessors.getOrDefault(previous, null);
+            Map.Entry<Vertex, Edge> entry = predecessors.get(previous);
+            if (entry != null) {
+                previous = entry.getKey();
+                route.add(entry.getValue());
+            } else {
+                previous = null;
+            }
         } while (previous != null);
         Collections.reverse(route);
         return route;
